--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -1,8 +1,7 @@
-{% macro byline(authorOrTranslator, lazyLoad, showBio, role, locale) %}
+{% macro byline(authorOrTranslator, lazyLoad, showBio, role) %}
     {# Use the full URL for original authors, and a relative path for
     translators and regular authors #}
     {% set authorOrTranslatorURL = authorOrTranslator.url if role === "author" else (authorOrTranslator.path | url) %}
-    {% set translatedLocale %}{% t "original-author-translator.locales." + locale %}{% endset %}
 
     <section class="author-card" data-test-label="{{ 'translator-card' if role === 'translator' else 'author-card' }}">
         {% if authorOrTranslator.profile_image %}
@@ -29,8 +28,7 @@
                 <a href="{{ authorOrTranslatorURL }}" data-test-label="profile-link">
                     {% if role === 'author' %}
                         {% t 'original-author-translator.roles.author', {
-                            name: authorOrTranslator.name,
-                            locale: translatedLocale
+                            name: authorOrTranslator.name
                         } %}
                     {% elif role === 'translator' %}
                         {% t 'original-author-translator.roles.translator', {
