--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -80,7 +80,7 @@ body {
 /* Centered content container blocks */
 .inner {
   margin: 0 auto;
-  max-width: 1040px;
+  max-width: 1060px;
   width: 100%;
 }
 
@@ -2370,19 +2370,11 @@ a.banner:hover span {
 
 .ad-wrapper {
   text-align: center;
-  padding: 10px 0;
-  min-width: 336px;
-  max-width: 100%;
-  width: 100%;
   min-height: 280px;
 }
 
 .ad-wrapper.banner {
   min-width: 100%;
-}
-
-.ad-wrapper:not(.ad-wrapper.banner) {
-  margin: 0 0 1.5em;
 }
 
 .ad-wrapper .ad-text {
@@ -2391,9 +2383,36 @@ a.banner:hover span {
   margin-bottom: 10px;
 }
 
-/* Hide ads for authenticated readers */
-.hide-ads .ad-wrapper {
+/* Adjust wide image and HTML video widths when ads are enabled */
+.ad-layout .post-full-content .kg-width-wide .kg-image,
+.ad-layout .post-full-content video {
+  max-width: 100%;
+}
+
+/* Hide sidebar by default for smaller screens */
+.ad-layout .sidebar {
   display: none;
+}
+
+/* Display sidebar for desktop readers */
+@media (min-width: 900px) {
+  .ad-layout .post-full-content {
+    padding: 70px 0 0;
+  }
+
+  .ad-layout .post-and-sidebar {
+    display: grid;
+    grid-template-columns: minmax(0, 1fr) 300px;
+    gap: 40px;
+    margin: 0 auto;
+  }
+
+  .ad-layout .sidebar {
+    display: flex;
+    max-width: 300px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 /* 17. RTL layout
