fix: styling for Ghost editor images and videos when the ad layout is active

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2383,8 +2383,9 @@ a.banner:hover span {
   margin-bottom: 10px;
 }
 
-/* Adjust wide image and HTML video widths when ads are enabled */
-.ad-layout .post-full-content .kg-width-wide .kg-image,
+/* Adjust Ghost editor and markdown images and HTML video widths when ads are enabled */
+.ad-layout .post-full-content .kg-image-card img,
+.ad-layout .post-full-content img,
 .ad-layout .post-full-content video {
   max-width: 100%;
 }
