--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2383,8 +2383,12 @@ a.banner:hover span {
   margin-bottom: 10px;
 }
 
-/* Adjust wide image and HTML video widths when ads are enabled */
-.ad-layout .post-full-content .kg-width-wide .kg-image,
+/* Adjust image and video widths when ads are enabled */
+/* Ghost editor images */
+.ad-layout .post-full-content .kg-image-card img,
+/* Markdown images */
+.ad-layout .post-full-content p img,
+/* HTML video */
 .ad-layout .post-full-content video {
   max-width: 100%;
 }
