--- a/src/_includes/partials/card.njk
+++ b/src/_includes/partials/card.njk
@@ -31,7 +31,7 @@
                 <header class="post-card-header">
                     {% if primaryTag %}
                         <span class="post-card-tags">
-                            <a href="{{ primaryTag.path | url }}">
+                            <a dir="ltr"  href="{{ primaryTag.path | url }}">
                                 #{{ primaryTag.name }}
                             </a>
                         </span>
