--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -23,7 +23,7 @@ time #}
                         </time>
                         {% if primaryTag %}
                             <span class="date-divider">/</span>
-                            <a href="{{ primaryTag.path | url }}">
+                            <a  dir="ltr" href="{{ primaryTag.path | url }}">
                                 #{{ primaryTag.name }}
                             </a>
                         {% endif %}
