--- a/src/_includes/partials/prism.njk
+++ b/src/_includes/partials/prism.njk
@@ -42,6 +42,8 @@
 <script defer type="text/javascript"
     src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-jsx.min.js"></script>
 <script defer type="text/javascript"
+    src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-julia.min.js"></script>
+<script defer type="text/javascript"
     src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-kotlin.min.js"></script>
 <script defer type="text/javascript"
     src="https://cdn.freecodecamp.org/news-assets/prism-1-16-0/prism-lua.min.js"></script>
