--- a/src/_includes/partials/search-bar.njk
+++ b/src/_includes/partials/search-bar.njk
@@ -1,9 +1,16 @@
+{% set searchPlaceholder %}
+  {% if site.roundedTotalHits < 100 %}
+    {%- t 'search.placeholder.generic' -%}
+  {% else %}
+    {%- t 'search.placeholder.numbered', { roundedHits: '(site.roundedTotalHitsLocalizedString)' } -%}
+  {% endif %}
+{% endset %}
 <form id="search-form" data-test-label="search-bar">
   <div role="search" class="searchbox__wrapper">
     <label class="fcc_sr_only" for='search-input'>
       {% t 'search.label' %}
     </label>
-    <input type="search" placeholder="{% t 'search.placeholder' %}" id="search-input" />
+    <input type="search" placeholder="{{ searchPlaceholder }}" id="search-input" />
     <button type="submit" class="ais-SearchBox-submit">
       {% include "partials/icons/magnifying-glass.njk" %}
       <span class="fcc_sr_only">{% t 'search.accessible-name' %}</span>
