fix: rename entries to records

--- a/src/_includes/partials/search-bar.njk
+++ b/src/_includes/partials/search-bar.njk
@@ -1,9 +1,9 @@
 {% set searchPlaceholder %}
-    {% if site.roundedTotalEntries < 100 %}
+    {% if site.roundedTotalRecords < 100 %}
         {%- t 'search.placeholder.default' -%}
     {% else %}
         {%- t 'search.placeholder.numbered', {
-            roundedTotalEntries: site.roundedTotalEntriesLocalizedString
+            roundedTotalRecords: site.roundedTotalRecordsLocalizedString
         } -%}
     {% endif %}
 {% endset %}
