revert: "Merge branch 'freeCodeCamp:main' into main"
This reverts commit 8c32d939e3d798df1993c1a5f1768a79faf87fcc, reversing
changes made to 8ee3f7346e2092c6834a745943c9f672ad848d0f.

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -23,7 +23,7 @@ time #}
                         </time>
                         {% if primaryTag %}
                             <span class="date-divider">/</span>
-                            <a  dir="ltr" href="{{ primaryTag.path | url }}">
+                            <a href="{{ primaryTag.path | url }}">
                                 #{{ primaryTag.name }}
                             </a>
                         {% endif %}
@@ -42,7 +42,7 @@ time #}
                 </div>
                 {% if post.feature_image %}
                     <figure class="post-full-image">
-                        {%
+                        {% 
                             featureImage
                             post.feature_image,
                             (title | escape),
