fix: missing trailing slash in nav logo and 404 error link

--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -3,7 +3,7 @@
         {% include "partials/search-bar.njk" %}
     </div>
     <div class="site-nav-middle">
-        <a class="site-nav-logo" href="{{ site.url }}" data-test-label="site-nav-logo"><img src="{{ site.logo }}" alt="{{ site.title }}" /></a>
+        <a class="site-nav-logo" href="{{ site.url + '/' }}" data-test-label="site-nav-logo"><img src="{{ site.logo }}" alt="{{ site.title }}" /></a>
     </div>
     <div class="site-nav-right">
         <div class="nav-group">
