--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -56,7 +56,7 @@ time #}
                 {% endif %}
                 <section class="post-full-content">
                     <div class="post-and-sidebar">
-                        <section class="post-content {{ "medium-migrated-article" if (post.primary_author.name === "freeCodeCamp.org") }}">
+                        <section class="post-content {{ "medium-migrated-article" if (post.primary_author.name === "freeCodeCamp.org") }}" data-test-label="post-content">
                             {{ content | safe }}
                         </section>
                         {% if adsEnabled %}
