feat: publish embedded videos page for testing, add tests

--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -31,7 +31,7 @@
                     </figure>
                 {% endif %}
                 <section class="post-full-content">
-                    <section class="post-content">
+                    <section class="post-content" data-test-label="post-content">
                         {{ content | safe }}
                     </section>
                     <hr />
