fix: remove isAuthenticated check from ad.njk script

--- a/src/_includes/partials/ad.njk
+++ b/src/_includes/partials/ad.njk
@@ -10,6 +10,6 @@
         data-full-width-responsive="true"
     ></ins>
     <script>
-        if (!isAuthenticated) (adsbygoogle = window.adsbygoogle || []).push({});
+        (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
 </div>
