--- a/src/_includes/partials/card.njk
+++ b/src/_includes/partials/card.njk
@@ -45,14 +45,14 @@
             </div>
             <footer class="post-card-meta">
                 {% if post.primary_author.name === "freeCodeCamp.org" %}
-                    <time class="meta-item-single" datetime="{{ post.published_at }}">{% timeAgo post.published_at %}</time>
+                    <time class="meta-item-single" datetime="{{ post.publishedAt }}">{% timeAgo post.publishedAt %}</time>
                 {% else %}
                     <ul class="author-list" data-test-label="author-list">
                         {% if post.original_post %}
-                            {{ roleListItem(post.primary_author, post.published_at, 'translator') }}
-                            {{ roleListItem(post.original_post.primary_author, post.original_post.published_at, 'author', post.original_post.locale_i18n) }}
+                            {{ roleListItem(post.primary_author, post.publishedAt, 'translator') }}
+                            {{ roleListItem(post.original_post.primary_author, post.original_post.publishedAt, 'author', post.original_post.locale_i18n) }}
                         {% else %}
-                            {{ roleListItem(post.primary_author, post.published_at) }}
+                            {{ roleListItem(post.primary_author, post.publishedAt) }}
                         {% endif %}
                     </ul>
                 {% endif %}
