--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -36,10 +36,10 @@
                 <dc:creator>
                     <![CDATA[ {{ post.author.name }} ]]>
                 </dc:creator>
-                <pubDate>{% buildDateFormatter site.timezone, post.published_at %}</pubDate>
+                <pubDate>{% buildDateFormatter site.timezone, post.publishedAt %}</pubDate>
                 <media:content url="{{ post.feature_image }}" medium="image" />
                 <content:encoded>
-                    <![CDATA[ {{ (post.excerpt | safe) if feed.path === "/" else (post.html | safe) }} ]]>
+                    <![CDATA[ {{ (post.excerpt | safe) if feed.path === "/" else (post.body | safe) }} ]]>
                 </content:encoded>
             </item>
         {% endfor %}
