--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -61,7 +61,7 @@ body {
 .site-main {
   z-index: 100;
   flex-grow: 1;
-  margin-top: calc(var(--header-height) * 2 + 20px);
+  margin-top: calc(var(--header-height) * 1.7);
 }
 
 .under-header-content + .site-main {
