--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -61,7 +61,7 @@ body {
 .site-main {
   z-index: 100;
   flex-grow: 1;
-  margin-top: calc(var(--header-height) * 3 + 5px);
+  margin-top: calc(var(--header-height) * 2 + 20px);
 }
 
 .under-header-content + .site-main {
@@ -119,7 +119,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 40px 10px 30px;
-  margin-top: calc(var(--header-height) * 2);
+  margin-top: calc(var(--header-height) * 1.7);
   min-height: 200px;
   text-align: center;
   color: white;
@@ -172,13 +172,12 @@ body {
   z-index: 300;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   /* overflow-y: auto; */
-  height: 40px;
   font-size: 1.2em;
   font-family: Lato, sans-serif;
   font-display: swap;
-  height: 38px;
+  height: var(--header-height);
   background: var(--theme-color);
   position: fixed;
   z-index: 1000;
