--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -1131,7 +1131,8 @@ Usage (In Ghost editor):
 
 .post-full-content table {
   -webkit-overflow-scrolling: touch;
-  background: radial-gradient(
+  background:
+    radial-gradient(
         ellipse at left,
         rgba(0, 0, 0, 0.2) 0%,
         rgba(0, 0, 0, 0) 75%
@@ -1144,7 +1145,9 @@ Usage (In Ghost editor):
       )
       100% center;
   background-attachment: scroll, scroll;
-  background-size: 10px 100%, 10px 100%;
+  background-size:
+    10px 100%,
+    10px 100%;
   background-repeat: no-repeat;
 }
 
@@ -1335,7 +1338,8 @@ pre.runkit-element {
   font-size: 1.4rem;
   letter-spacing: 0.2px;
   background: white;
-  box-shadow: rgba(39, 44, 49, 0.08) 0 12px 26px,
+  box-shadow:
+    rgba(39, 44, 49, 0.08) 0 12px 26px,
     rgba(39, 44, 49, 0.03) 1px 3px 8px;
   opacity: 0;
   transition: all 0.3s cubic-bezier(0.4, 0.01, 0.165, 0.99);
@@ -1711,7 +1715,9 @@ pre.runkit-element {
   color: var(--gray90);
   text-decoration: none;
   min-height: 148px;
-  box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.09);
+  box-shadow:
+    0 2px 5px -1px rgba(0, 0, 0, 0.15),
+    0 0 1px rgba(0, 0, 0, 0.09);
   border-radius: 3px;
 }
 
