--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -177,7 +177,7 @@ body {
   font-size: 1.2em;
   font-family: Lato, sans-serif;
   font-display: swap;
-  height: 38px;
+  height: var(--header-height);
   background: var(--theme-color);
   position: fixed;
   z-index: 1000;
