--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -61,7 +61,7 @@ body {
 .site-main {
   z-index: 100;
   flex-grow: 1;
-  margin-top: calc(var(--header-height) * 2 + 20px);
+  margin-top: calc(var(--header-height) * 3 + 5px);
 }
 
 .under-header-content + .site-main {
@@ -119,7 +119,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 40px 10px 30px;
-  margin-top: calc(var(--header-height) * 1.7);
+  margin-top: calc(var(--header-height) * 2);
   min-height: 200px;
   text-align: center;
   color: white;
@@ -172,7 +172,7 @@ body {
   z-index: 300;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   /* overflow-y: auto; */
   font-size: 1.2em;
   font-family: Lato, sans-serif;
