--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2037,7 +2037,8 @@ pre.runkit-element {
 .footer-desc-col {
   padding-inline: 15px;
   margin-bottom: 30px;
-  align-self: center;
+  align-self: start;
+  margin-top: 24px;
 }
 
 .footer-desc-col a {
