WIP: demo of how to use hashnode

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,11 +1,11 @@
 ---
 pagination:
-  data: ghost.posts
+  data: collections.combinedPosts
   size: 25
   alias: posts
 ---
 
-{# 
+{#
     size must be set manually,
     and be the same number as env.POSTS_PER_PAGE
 #}
