--- a/src/posts/posts.njk
+++ b/src/posts/posts.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: ghost.posts
+  data: collections.combinedPosts
   size: 1
   alias: post
   addAllPagesToCollections: true
