--- a/src/_includes/partials/role-list-item.njk
+++ b/src/_includes/partials/role-list-item.njk
@@ -1,13 +1,13 @@
 {% macro roleListItem(authorOrTranslator, publishedAt, role, locale) %}
     {# Use the full URL for original authors, and a relative path for
     translators and regular authors #}
-    {% set authorOrTranslatorURL = authorOrTranslator.url if role === "author" else (authorOrTranslator.path | url) %}
+    {% set authorOrTranslatorURL = authorOrTranslator.url if role === "author" else (authorOrTranslator.path ) %}
     {% set translatedLocale %}{% t "original-author-translator.locales." + locale %}{% endset %}
-    
+
     <li class="author-list-item" data-test-label="{{ 'translator-list-item' if role === 'translator' else 'author-list-item' }}">
         <a href="{{ authorOrTranslatorURL }}" class="static-avatar">
             {% if authorOrTranslator.profile_image %}
-                {% 
+                {%
                     image
                     authorOrTranslator.profile_image,
                     "author-profile-image",
