--- a/src/_includes/layouts/tag.njk
+++ b/src/_includes/layouts/tag.njk
@@ -18,10 +18,10 @@
                 {% t 'tag.multiple-posts', { postCount: postCount } %}
             {% endif %}
         </h2>
-        
+
         <div class="tags-row">
             {% for tag in popularTags %}
-                <a class='tag' href="{{ tag.path | url }}">
+                <a class='tag' href="{{ tag.path }}">
                     <h3 dir="ltr">#{{ tag.name }} <small> | {{ tag.count.posts }}</small></h3>
                 </a>
             {% endfor %}
