--- a/src/search-results.njk
+++ b/src/search-results.njk
@@ -36,7 +36,7 @@ permalink: '/search/'
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ site.title }}">
     <meta property="og:description" content="{% t 'meta-tags:description' %}">
-    <meta property="og:url" content="{{ site.url + permalink }}">
+    <meta property="og:url" content="{{ permalink | htmlBaseUrl }}">
     <meta property="og:image" content="{{ site.cover_image }}">
     <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
@@ -44,7 +44,7 @@ permalink: '/search/'
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ site.title }}">
     <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
-    <meta name="twitter:url" content="{{ site.url + permalink }}">
+    <meta name="twitter:url" content="{{ permalink | htmlBaseUrl }}">
     <meta name="twitter:image" content="{{ site.cover_image }}">
     <meta name="twitter:site" content="{{ site.twitter }}">
 
