--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -76,7 +76,7 @@
         {% if canonicalUrl %}
             <link rel="canonical" href="{{ canonicalUrl }}">
         {% else %}
-            <link rel="canonical" href="{{ page.url | htmlBaseUrl }}">
+            <link rel="canonical" href="{{ page.url | htmlBaseUrl(site.url) }}">
         {% endif %}
         <meta name="referrer" content="no-referrer-when-downgrade">
 
@@ -91,7 +91,7 @@
             <meta property="og:type" content="website">
             <meta property="og:title" content="{{ site.title }}">
             <meta property="og:description" content="{% t 'meta-tags:description' %}">
-            <meta property="og:url" content="{{ page.url | htmlBaseUrl }}">
+            <meta property="og:url" content="{{ page.url | htmlBaseUrl(site.url) }}">
             <meta property="og:image" content="{{ site.cover_image }}">
             <meta property="article:publisher" content="https://www.facebook.com/freecodecamp">
 
@@ -99,7 +99,7 @@
             <meta name="twitter:card" content="summary_large_image">
             <meta name="twitter:title" content="{{ site.title }}">
             <meta name="twitter:description" content="{% t 'meta-tags:description' %}">
-            <meta name="twitter:url" content="{{ page.url | htmlBaseUrl }}">
+            <meta name="twitter:url" content="{{ page.url | htmlBaseUrl(site.url) }}">
             <meta name="twitter:image" content="{{ site.cover_image }}">
             <meta name="twitter:site" content="{{ site.twitter }}">
 
