fix: use htmlBaseUrl filter for rss feed url in default.njk

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -111,7 +111,7 @@
         {% endblock %}
 
         <meta name="generator" content="Eleventy">
-        <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url + "/rss/" }}">
+        <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/rss/' | htmlBaseUrl(site.url) }}">
 
         {{ site.codeinjection_head | safe if site.codeinjection_head }}
         {{ codeinjection_head | safe if codeinjection_head }}
